--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "",
+  "name": "pragmatic-logic-website",
   "type": "module",
-  "version": "0.0.1",
+  "version": "1.0.0",
+  "description": "Pragmatic Logic - Symbiotic AI for Healthcare",
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
@@ -9,6 +10,12 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.14.1"
+    "astro": "^5.14.1",
+    "@astrojs/tailwind": "^5.1.1",
+    "@astrojs/mdx": "^4.0.0",
+    "tailwindcss": "^3.4.0"
+  },
+  "devDependencies": {
+    "@types/node": "^20.0.0"
   }
 }
