--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.14.1",
-    "@astrojs/tailwind": "^5.1.1",
     "@astrojs/mdx": "^4.0.0",
+    "@astrojs/tailwind": "^5.1.1",
+    "astro": "^5.14.1",
+    "lucide-astro": "^0.545.0",
     "tailwindcss": "^3.4.0"
   },
   "devDependencies": {
