--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "tailwindcss": "^3.4.0"
   },
   "devDependencies": {
-    "@types/node": "^20.0.0"
+    "@astrojs/check": "^0.9.6",
+    "@types/node": "^20.0.0",
+    "typescript": "^5.9.3"
   }
 }
