Add confidential document access with Supabase auth
- Add sign-in/sign-up pages with email/password and magic link
- Add confidentiality agreement page with NDA terms
- Add protected architecture document viewer
- Include Lilo Engine architecture document and images (via LFS)
- Add Supabase client configuration
- Add database setup SQL script
- Add setup documentation

--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,6 @@ Session.vim
 *.bak
 *.tmp
 *.temp
+
+# Confidential documents (optional - uncomment to exclude from repo)
+# public/confidential-docs/
