--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/mdx": "^4.0.0",
     "@astrojs/tailwind": "^5.1.1",
+    "@supabase/supabase-js": "^2.89.0",
     "astro": "^5.14.1",
     "lucide-astro": "^0.545.0",
     "tailwindcss": "^3.4.0"
